# nvsx

./: .gitignore  LICENSE  README.md  nvsx  pyproject.toml
demo/: tour.sh
examples/: legacy-xid79-runbook.md  sample-runbook.md
runbooks/: README.md  gpu-off-bus-recover.yaml  gpu-off-bus.yaml  thermal-throttle.yaml  training-migrate.yaml
runbooks/hooks/gpu-off-bus/: on-recover.sh  on-remediate.sh  preflight.sh
runbooks/hooks/gpu-off-bus-recover/: on-recover.sh  on-remediate.sh  preflight.sh
scripts/: collect-metrics.sh  nvsentinel-torchpass-bridge.sh  port-forward-all.sh  simulate-nvsentinel-fault.sh
shims/: README.md  demo-janitor-deployment.yaml  demo-janitor.sh  sentinel-workload.yaml  simulate-gpu-off-bus.sh
src/nvsx/: __init__.py  __main__.py  aliases.py  bridge.py  cli.py  converter.py  doctor.py  presets.py  recorder.py  render.py  repl.py  runner.py  scaffolder.py  schema.py  selftest.py  server.py  setup.py  watcher.py
